block-traffic-checkout.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "block-checkout"
spec:
  endpointSelector:
    matchLabels:
      app: checkoutservice
  egress:
    - toPorts:
      - ports:
        - port: "5050"
          protocol: TCP
